--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,7 +5,7 @@
 
 /* CSS reset */
 
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-}
+} */
 
 .navbar-container {
   background: #f9fbf0;
