--- a/src/components/landingComponents/WelcomeSection.css
+++ b/src/components/landingComponents/WelcomeSection.css
@@ -1,7 +1,3 @@
-:root {
-  --text-color: #f9fbf0;
-}
-
 .welcome-container {
   background: url('/Users/elizabethjohnstone/Documents/capstone-project/public/images/berries.jpg') center center/cover no-repeat;
   height: 100vh;
@@ -10,18 +6,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #f9fbf0;
+
 }
 
-.welcome-container > h1 {
-  color: var(--text-color);
-  font-size: 100px;
+.welcome-message {
+  font-size: 75px;
   margin-top: -100px;
 }
 
-.welcome-container > p {
+.welcome-text {
   margin-top: 8px;
-  color: var(--text-color);
-  font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-size: 24px;
 }
