--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 7%;
-  margin-bottom: 8%;
+  margin-top: 9%;
+  margin-bottom: 9%;
 }
 
 .inst-container, .login-form-container {
@@ -29,4 +29,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 800px) {
+  #login-form-body {
+    margin-top: 30%;
+    margin-bottom: 30%;
+  }
+
+  .login-form-container {
+    padding: 35px 30px;
+  }
+
+  .recipes-title {
+    font-size: 14pt;
+    width: 100%;
+    padding-top: 20px;
+  }
 }
