--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -47,6 +47,13 @@
   font-size: 24px;
 }
 
+.foot-attribution {
+  text-decoration: none;
+  color: #23833a;
+  font-size: 8pt;
+  padding-top: 1%;
+}
+
 
 .nav-menu {
   display: grid;
@@ -87,19 +94,51 @@
   color: #f9fbf0;
   border: 1px solid #f9fbf0;
   border-radius: 2px;
-
 }
 
-/* @media only screen and (max-width: 599px) {
-.navbar-container {
-  background: #3308a7;
-  height: 250px;
-}
+
+@media screen and (max-width: 800px) {
+
+.nav-container {
+  height: 130px;
 }
 
-@media only screen and (min-width: 600px) and (max-width: 1050px) {
-  .navbar-container {
-  background: #428daf;
-  height: 250px;
+.nav-menu {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  padding-left: 20px;
+  font-size: 12pt;
+  margin-right: 0;
+}
+.nav-menu {
+  margin-bottom: -14%;
+}
+  .nav-links {
+    padding: 0;
+    margin: 0;
   }
-} */
+
+  .nav-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 30%);
+  }
+
+  .nav-btn {
+    margin-right: 20px;
+    margin-top: 69%;
+
+    font-size: 10pt;
+    padding: 0;
+    height: 25px;
+    width: 65px;
+  }
+
+
+.foot-container {
+  padding: .5rem 0 1rem 0;
+}
+
+}
