--- a/src/components/landingComponents/WelcomeSection.css
+++ b/src/components/landingComponents/WelcomeSection.css
@@ -7,7 +7,6 @@
   justify-content: center;
   align-items: center;
   color: #f9fbf0;
-
 }
 
 .welcome-message {
@@ -18,4 +17,22 @@
 .welcome-text {
   margin-top: 8px;
   font-size: 24px;
+}
+
+@media screen and (max-width: 800px) {
+  .welcome-container {
+  height: 67vh;
+  }
+  
+  .welcome-message {
+    font-size: 44px;
+    margin-top: -100px;
+  }
+  
+  .welcome-text {
+    margin-top: 8px;
+    font-size: 16px;
+  }
+
+
 }
