--- a/src/components/landingComponents/WelcomeSection.css
+++ b/src/components/landingComponents/WelcomeSection.css
@@ -1,5 +1,5 @@
 .welcome-container {
-  background: url('/Users/elizabethjohnstone/Documents/capstone-project/public/images/berries.jpg') center center/cover no-repeat;
+  /* background: url('/Users/elizabethjohnstone/Documents/capstone-project/public/images/berries.jpg') center center/cover no-repeat; */
   height: 100vh;
   width: 100%;
   display: flex;
